@@ -315,6 +315,9 @@ Querying a Remote Table Database --- :class:`RTDBQuery`
             Calling :meth:`filter` multiple times with different conditions is
             equivalent to applying a logical ``AND`` between the conditions.
 
+            Unfortunately, due to a Tokyo Tyrant limitation, neither *column*
+            nor *expr* can contain null bytes.
+
 
     .. method:: sort(column, type)
 
@@ -323,6 +326,10 @@ Querying a Remote Table Database --- :class:`RTDBQuery`
         :param column: name of the column. An empty string means *key*.
         :type column: :class:`str` (Python2)/:class:`bytes` (Python3)
         :param type: sort type (and direction), see :ref:`tdbquery_sort_types`.
+
+        .. note::
+            Unfortunately, due to a Tokyo Tyrant limitation, *column* cannot
+            contain null bytes.
 
 
     .. method:: limit([max[, skip]])
